2010-08-16  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * scintilla/LexMarkdown.cxx:
   Fix infinite loop in Markdown lexer (patch by Colomban Wendling,
   thanks).
 * src/build.c:
   Fix saving non-project filetype error regex.


2010-08-15  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * wscript:
   Check for libsocket on OpenSolaris to fix build.
 * src/encodings.c:
   Rewrite the logic to auto detect encodings a bit to make it more
   readable and fix a slightly wrong detection on Windows
   (closes #3019573).


2010-08-13  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * win32-config.h, geany.nsi, configure.ac, doc/geany.txt,
   doc/geany.html, wscript, geany_private.rc:
   Version bump.
 * src/filetypes.c, NEWS:
   Fix segfault on Tools->Reload Configuration when no documents are
   open (#3037079).


2010-08-12  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/search.c:
   Fix a memory leak based on input by Daniel Marjamäki. Thanks.


2010-08-10  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/editor.c:
   Revert r4840 scope completion mode as it sometimes breaks
   autocompletion.


2010-08-05  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/ui_utils.c, src/ui_utils.h:
   Make ui_label_new_bold() a function.
   Escape the name of the current document for markup when using
   document name for menu items (closes #3038844).


2010-07-13  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/filetypes.c:
   On Windows, convert filetype extensions read from config files
   to lower case (closes #3028856).


2010-07-12  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/keybindings.c:
   Focus toolbar item when pressing Go to Line keybinding only when
   it's not in the toolbar's drop down overflow menu (fixes #3027454).


2010-07-11  Lex Trotman  <elextr(at)gmail(dot)com>

 * src/build.c:
   Fix build menu translation problems.

